--- a/site/config.toml
+++ b/site/config.toml
@@ -1,4 +1,4 @@
-baseurl = "http://gigitjari.xyz/"
+baseurl = "https://gigitjari.xyz/"
 languageCode = "en-us"
 languageLang = "en"
 title = "Homepage"
