--- a/site/config.toml
+++ b/site/config.toml
@@ -1,4 +1,4 @@
-baseurl = "https://determined-mccarthy-17070b.netlify.app"
+baseurl = "https://gigitjari.xyz"
 languageCode = "en-us"
 languageLang = "en"
 title = "Homepage"
