--- a/site/config.toml
+++ b/site/config.toml
@@ -1,7 +1,7 @@
 baseurl = "https://gigitjari.xyz"
 languageCode = "en-us"
 languageLang = "en"
-title = "Homepage"
+title = "Bening Abadi Transport"
 
 # RSS, categories and tags disabled for an easy start
 # See configuration options for more details: 
